--- a/pickups/templates/receipt.html
+++ b/pickups/templates/receipt.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="receipt">
     <h2>Receipt</h2>
+    <h4>Your order is submitted successfully<h4>
     <table class="receipt-table">
         <tr>
             <th>Name:</th>
